--- a/package.json
+++ b/package.json
@@ -24,5 +24,11 @@
     "repository" : {
         "type": "git",
         "url": "git://github.com/scarnie/docopt.coffee.git"
+    },
+    "scripts": {
+      "test": "mocha test.js"
+    }, 
+    "devDependencies": {
+      "mocha": "^3.2.0"
     }
 }
